@@ -93,7 +93,7 @@ static PyObject *ErrorReturn(char *message)
 #elif defined(HAVE_EXTENSIONS_ARRAYOBJECT_H)
 #include "Extensions/arrayobject.h"
 #elif defined(HAVE_NUMERIC_ARRAYOBJECT_H)
-#include "Numeric/arrayobject.h"
+#include "numpy/oldnumeric.h"
 #elif defined(HAVE_NUMERICAL_ARRAYOBJECT_H)
 #include "numerical/arrayobject.h"
 #else
