@@ -1,9 +1,11 @@
+## Automatically adapted for numpy.oldnumeric Jul 09, 2010 by -c
+
 # $Id$
 import sys
 from pymol import opengl
 
 if opengl._numeric:
-    from Numeric import ArrayType
+    from numpy.oldnumeric import ArrayType
     try:
         import _glu_num
         _glu = _glu_num
